--- a/mysite/blog/templates/blog/content.html
+++ b/mysite/blog/templates/blog/content.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12 col-md-8">
-        <p class="text-center"><span>{{ article.author.username }}</span><span style="margin-left:20px">{{publish}}</span></p>
+        <p class="text-center"><span>{{ article.author.username }}</span><span style="margin-left:20px">{{article.publish}}</span></p>
         <div>{{ article.body }}</div>
     </div>
         <div class="col-xs-6 col-md-4">
