--- a/mysite/templates/blog/content.html
+++ b/mysite/templates/blog/content.html
@@ -4,16 +4,17 @@
 
 {% block content %}
 <div class="row text-center vertical-middle-sm">
-    <h1>{{ article.title }}</h1>
+    <h1>{{ article.title }}</h1>  <!-- h1-h6:定义不同级别的标题 -->
 </div>
 <div class="row">
     <div class="col-xs-12 col-md-8">
-        <p class="text-center"><span>{{ article.author.username }}</span><span style="margin-left:20px">{{article.publish}}</span></p>
+        <p class="text-center"><span>{{ article.author.username }}</span><span style="margin-left:20px">{{article.publish}}</span></p>  <!--span:在文本行中定义一个区域，即行内包含框。p:定义段落结构 -->
         <div>{{ article.body }}</div>
     </div>
-        <div class="col-xs-6 col-md-4">
-            <h2>广告</h2>
-            <p>跟老齐学</p><img width="200px" src="https://raw.githubusercontent.com/qiwsir/DjangoPracticeProject/master/python-book2.png">
-        </div>
+    <div class="col-xs-6 col-md-4">
+        <h2>广告</h2>
+        <p>跟老齐学</p>
+        <img width="200px" src="https://raw.githubusercontent.com/qiwsir/DjangoPracticeProject/master/python-book2.png">
+    </div>
 </div>
 {% endblock %}
