--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-
+{% load staticfiles %}  <!--声明引入静态文件的标签-->
+<!-- 头部信息结构元素 -->
 <head>
-    <meta http-equiv="x-ua-compatible" content="IE=Edge">
+    <!-- 设置文档字符编码 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>  <!--该块可继承进行重新-->
-    <link rel="stylesheet" href="https://github.com/necolas/normalize.css/blob/master/normalize.css">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- 设置文档标题 -->
+    <title>{% block title %}{% endblock %}</title>  <!--该块可继承进行重写-->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 
+<!-- 主体内容结构元素 -->
 <body>
-    <div class="container">{%  block content %}{% endblock %}</div>  <!--该块可继承进行重新-->
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script src="https://cdn.bootcss.com//bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   {% include "header.html" %}
+    <div class="container">{%  block content %}{% endblock %}</div>  <!--该块可继承进行重写--->
+   {% include "footer.html" %}
+   {% block javascript %}{% endblock %} <!--该块可继承进行重写--->
 </body>
-
 </html>
