--- a/mysite/templates/header.html
+++ b/mysite/templates/header.html
@@ -17,7 +17,14 @@
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
                 <!--判断用户是否登录：-->
                 {%if user.is_authenticated %}
-                <li><a href="#">{{ user.username }}</a></li>
+                <li> <!--以下为新增：添加修改密码 -->
+                    <div class="dropdown" style="margin-top:8px">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">{{user.username}}<span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'account:password_change' %}">修改密码</a> </li>
+                        </ul>
+                    </div>  <!--修改结束：-->
+                </li>
                 <li><a href="{% url 'account:user_logout' %}">Logout</a></li>
                 {% else %}
                 <li><a href="{% url 'account:user_login' %}">LOGIN</a></li>
@@ -26,3 +33,5 @@
         </div>
     </nav>
 </div>
+<script src ="{% static 'js/jquery.js' %}"></script>
+<script src ="{% static 'js/bootstrap.js' %}"></script>
